<resources>
    <string name="app_name">Proyecto_Final</string>
    <string name="txt_titulo_InicioSesion">Iniciar Sesión</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="txt_btn_restaurar">Restaurar</string>
    <string name="txt_titulo_menu">Menú Principal</string>
    <string name="txt_modelos">Modelos</string>
    <string name="txt_vehiculos">Vehículos</string>
    <string name="txt_btn_agregar">Agregar</string>
    <string name="txt_btn_eliminar">Eliminar</string>
    <string name="txt_btn_modificar">Modificar</string>
    <string name="txt_btn_Consultar">Consultar</string>
    <string name="txt_titulo_agregar_vehiculos">Agregar Vehículos</string>
    <string name="txt_id_vehiculo">ID Vehículo</string>
    <string name="txt_num_serie">Número Serie</string>
    <string name="txt_id_modelo">ID Modelo</string>
    <string name="txt_fecha_fabricacion">Fecha Fabricación</string>
    <string name="txt_precio">Precio</string>
    <string name="txt_kilometraje">Kilometraje</string>
    <string name="txt_fecha_entrada">Fecha Entrada</string>
    <string name="txt_tipo">Tipo</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_btn_cancelar">Cancelar</string>
    <string name="txt_titulo_eliminar_vehiculos">Eliminar Vehículos</string>
    <string name="txt_btn_buscar">Buscar</string>
    <string name="txt_titulo_actualizar_vehiculos">Actualizar Vehículos</string>
    <string name="txt_btn_actualizar">Actualizar</string>
    <string name="txt_titulo_consultas_vehiculos">Buscar Vehículos</string>
    <string name="txt_rdio_todos">Mostrar Todos</string>
    <string name="txt_tiulo_agregar_modelo">Agregar Modelo</string>
    <string name="txt_nombre_modelo">Nombre Modelo</string>
    <string name="txt_anio_modelo">Año Modelo</string>
    <string name="txt_fabricante">Fabricante</string>
    <string name="txt_numero_cilindros">Número Cilindros</string>
    <string name="txt_numero_puertas">Número Puertas</string>
    <string name="txt_peso">Peso (KG)</string>
    <string name="txt_capacidad_pasajeros">Capacidad Pasajeros</string>
    <string name="txt_color_base">Color Base</string>
    <string name="txt_pais_fabricacion">País Fabricación</string>
    <string name="txt_titulo_bajas_modelos">Eliminar Modelos</string>
    <string name="txt_titulo_actualizar_modelos">Actualizar Modelos</string>
    <string name="txt_titulo_consultar_modelos">Consultar Modelos</string>
    <string name="txt_btn_ver_lista">Ver Lista</string>
    <string name="txt_titulo_listado_vehiculos">Lista de Vehículos</string>
    <string name="txt_titulo_listado_modelos">Lista de Modelos</string>
    <string name="txt_btn_hacer_otra_busqueda">Hacer otra Consulta</string>
    <string name="txt_btn_cerrar">Cerrar</string>


    <string-array name="lista_cilindros">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
    </string-array>

    <string-array name="lista_tipos">
        <item>Nuevo</item>
        <item>Usado</item>
    </string-array>

    <string-array name="lista_estado">
        <item>Disponible</item>
        <item>Vendido</item>
    </string-array>


</resources>