<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView36"
        android:layout_width="161dp"
        android:layout_height="31dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="125dp"
        android:text="@string/txt_titulo_consultas_vehiculos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioVehiculosIDVehiculo"
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:onClick="desactivarRadio"
            android:text="@string/txt_id_vehiculo"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="59dp" />

        <RadioButton
            android:id="@+id/radioVehiculoNumSerie"
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:onClick="desactivarRadio"
            android:text="@string/txt_num_serie"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="115dp" />

        <RadioButton
            android:id="@+id/radioVehiculosIDModelo"
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:onClick="desactivarRadio"
            android:text="@string/txt_id_modelo"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="171dp" />

        <RadioButton
            android:id="@+id/radioVehiculosPrecio"
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:onClick="desactivarRadio"
            android:text="@string/txt_precio"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="227dp" />

        <RadioButton
            android:id="@+id/radioVehiculosKilometraje"
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:onClick="desactivarRadio"
            android:text="@string/txt_kilometraje"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="283dp" />

        <RadioButton
            android:id="@+id/radioVehiculosTipo"
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:onClick="desactivarRadio"
            android:text="@string/txt_tipo"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="339dp" />

        <RadioButton
            android:id="@+id/radioVehiculosEstado"
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:onClick="desactivarRadio"
            android:text="@string/txt_estado"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="395dp" />

        <RadioButton
            android:id="@+id/radioVehiculosTodos"
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:checked="true"
            android:onClick="desactivarRadio"
            android:text="@string/txt_rdio_todos"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="451dp" />


    </RadioGroup>


    <EditText
        android:id="@+id/cajaVehiculosIDVehiculosBuscar"
        android:layout_width="241dp"
        android:layout_height="57dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="@string/txt_id_vehiculo"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <EditText
        android:id="@+id/cajaVehiculosNumSerieBuscar"
        android:layout_width="241dp"
        android:layout_height="57dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="@string/txt_num_serie"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <Spinner
        android:id="@+id/spinnerVehiculosIDModeloBuscar"
        android:layout_width="239dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/cajaVehiculosPrecioBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/cajaVehiculosNumSerieBuscar" />

    <Spinner
        android:id="@+id/spinnerVehiculosEstadoBuscar"
        android:layout_width="239dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/lista_estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/cajaVehiculosNumSerieBuscar" />

    <Spinner
        android:id="@+id/spinnerVehiculosTipoBuscar"
        android:layout_width="239dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/lista_tipos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/cajaVehiculosNumSerieBuscar" />

    <EditText
        android:id="@+id/cajaVehiculosPrecioBuscar"
        android:layout_width="242dp"
        android:layout_height="57dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/txt_precio"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/cajaVehiculosKilometrajeBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVehiculosIDModeloBuscar" />

    <EditText
        android:id="@+id/cajaVehiculosKilometrajeBuscar"
        android:layout_width="241dp"
        android:layout_height="55dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="@string/txt_kilometraje"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/cajaVehiculosPrecioBuscar" />

    <Button
        android:id="@+id/btnVehiculosBuscarBuscar"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/crema_base"
        android:onClick="buscarVehiculos"
        android:text="@string/txt_btn_buscar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnVehiculosCancelarBuscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnVehiculosCancelarBuscar"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="@color/crema_base"
        android:text="@string/txt_btn_cancelar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVehiculosBuscarBuscar"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVehiculosEstadoBuscar" />



</androidx.constraintlayout.widget.ConstraintLayout>